# my-gen-ai-apps

./: .gitignore  GenAI101.md  README.md  agent_basic_cli.py  agent_chat.py  agent_chat_rag.py  agent_chat_ui.py  agent_cli.py  agent_cli_langchain.py  agent_notes.py  agent_sample.py  agent_strands.py  agent_test.py  agent_ui_mcp.py  agent_ui_rag.py  agent_ui_rag.py.bkp  agent_ui_rag.py.bkp2  app.py  chatbot_cli.py  chatbot_ui.py  chatbot_ui_rag.py  gen_ai_slides.md  install_ollama.sh  pyproject.toml  requirements.txt  setup.sh  teardown.py  test.txt  webui.py
config/: dev.ini  strands_config.py
helpers/: agent_handler.py  chain_handler.py  config_handler.py  doc_retrieval.py  docs_db_handler.py  embedder.py  indexer.py  indexer_rag.py  llm_handler.py  ollama_handler.py  rag.py  retriever.py  session_handler.py  simple_mcp_server.py  test.py  tools.py  weather.py
helpers/sessions/: 853afe39-16b7-41ca-afd1-370f654cb076.json  fc4f964f-2574-4cca-8e40-25efe0c8efd2.json
setup/: setup.py
tests/: README.md  test_chain_handler.py  test_config_handler.py  test_indexer.py  test_llm_handler.py  test_requirements.txt  test_session_handler.py  test_tools.py
