[tool.poetry]
name = "my-ollama-rag-app"
version = "0.1.0"
description = "my ollama rag app"
authors = ["Rakesh Singh <kumar.rakesh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
